@@ -975,21 +975,29 @@
 							<visible>!Skin.HasSetting(HomeMenuNoTVShowButton)</visible>
 						</item>
 						<item>
+							<label>$LOCALIZE[19020]</label>
+							<property name="menu_id">$NUMBER[12000]</property>
+							<onclick>ActivateWindow(TVChannels)</onclick>
+							<thumb>icons/sidemenu/livetv.png</thumb>
+							<property name="id">livetv</property>
+							<visible>!Skin.HasSetting(HomeMenuNoTVButton)</visible>
+						</item>
+						<!-- item>
 							<label>$LOCALIZE[42012]</label>
 							<onclick>PlayMedia("plugin://plugin.program.umod.launcher/?com=LAUNCH_STANDALONE&amp;catID=root_category&amp;launID=4e2e839f24dd9da1731f6e411b508831")</onclick>
 							<property name="menu_id">$NUMBER[45000]</property>
 							<thumb>icons/sidemenu/livetv.png</thumb>
 							<property name="id">liv</property>
 							<visible>!Skin.HasSetting(HomeMenuNoLIVButton)</visible>
-						</item>
-						<item>
+						</item -->
+						<!-- item>
 							<label>$LOCALIZE[42009]</label>
 							<onclick>PlayMedia("plugin://plugin.program.umod.launcher/?com=LAUNCH_STANDALONE&amp;catID=root_category&amp;launID=f1900235cc04947f2b37eb6679e033d8")</onclick>
 							<property name="menu_id">$NUMBER[45300]</property>
 							<thumb>icons/sidemenu/tvfibracat.png</thumb>
 							<property name="id">tvondemand</property>
 							<visible>!Skin.HasSetting(HomeMenuNoTvondemandButton)</visible>
-						</item>
+						</item -->
 						<item>
 							<label>$LOCALIZE[42004]</label>
 							<onclick>PlayMedia("plugin://plugin.program.umod.launcher/?com=LAUNCH_STANDALONE&amp;catID=root_category&amp;launID=215537f67855f26a159cc79e50554931")</onclick>
@@ -1030,14 +1038,6 @@
 							<thumb>icons/sidemenu/musicvideos.png</thumb>
 							<property name="id">musicvideos</property>
 							<visible>!Skin.HasSetting(HomeMenuNoMusicVideoButton)</visible>
-						</item>
-						<item>
-							<label>$LOCALIZE[19020]</label>
-							<property name="menu_id">$NUMBER[12000]</property>
-							<onclick>ActivateWindow(TVChannels)</onclick>
-							<thumb>icons/sidemenu/livetv.png</thumb>
-							<property name="id">livetv</property>
-							<visible>!Skin.HasSetting(HomeMenuNoTVButton)</visible>
 						</item>
 						<item>
 							<label>$LOCALIZE[19021]</label>
